Light cleanup, add chips that will allow user to categorize time usage.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:name=".input.calendar.CalendarSelectionActivity"
             android:label="@string/title_activity_calendar_selection"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.jonkimbel.calendarboy.MainActivity" />
